[project]
name = "python-template"
version = "0.1.0"
description = "Python template project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.2",
]

[tool.ruff]
line-length = 79  # same as black; you can increase to 88 if you prefer less strict wrapping

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C"]  # enable common linter rules, including flake8, isort, bugbear, etc.

ignore = [
    "D100",  # missing docstring in public module
    "D104",  # missing docstring in __init__.py
    "E501",  # line too long (ignored if you don't want to enforce line length strictly)
]

fixable = ["ALL"]       # allow automatic fixing of all rules
unfixable = ["B"]        # do not auto-fix potential bugs (bugbear)

exclude = ["build", "dist", ".venv", "migrations", "tests/fixtures"]  # exclude these directories from linting

[tool.ruff.lint.pydocstyle]
convention = "google"  # docstring style to follow (other options: "numpy", "pep257")

[tool.ruff.format]
quote-style = "single"         # use single quotes for strings
indent-style = "tab"           # use tabs instead of spaces for indentation
docstring-code-format = true   # format code blocks inside docstrings
